Changed instructional messages

--- a/freeroam/client_package/ui/index.html
+++ b/freeroam/client_package/ui/index.html
@@ -31,10 +31,10 @@
             <h1>Join us on discord <span>https://discord.gg/pxzKzvy,</span></h1>
             <h1>Holding <span>'p'</span> will open the scoreboard,</h1>
             <h1>Pressing <span>'DEL'</span> in a car will activate bomb menu,</h1>
-            <h1>Press <span>'END'</span> near a rigged car to defuse a possible bomb</h1>
-            <h1>Press <span>'INS'</span> to open Altitude Meter,</h1>
-            <h1>You can press <span>'m'</span> to spawn weapons or press <span>'v'</span> to spawn vehicles,</h1>
-            <h1>To close this message press <span>'x'</span></h1><dddddddd></dddddddd>
+            <h1>Press <span>'END'</span> near a rigged car to defuse a possible bomb,</h1>
+			<h1>Press <span>'.'</span> or <span>','</span> while in a vehicle to change radio stations,</h1>
+            <h1>You can press <span>'m'</span> to spawn weapons or press <span>'v'</span> to spawn vehicles.</h1>
+            <h1>To close this message press <span>'x'</span></h1>
         </div>
         <script type="text/javascript" src="jquery-3.1.0.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
